# Robotic-Arm-ROS-Base

./: README.md
active_perception/: CMakeLists.txt  package.xml
active_perception/include/active_perception/: perception_utils.h
active_perception/script/: calc_fov.py
active_perception/src/: perception_utils.cpp
hierarchical_coverage_planner/: CMakeLists.txt  package.xml
hierarchical_coverage_planner/include/hierarchical_coverage_planner/: hcopp.h
path_searching/: CMakeLists.txt  package.xml
path_searching/include/path_searching/: astar2.h
path_searching/src/: astar2.cpp
plan_env/: CMakeLists.txt  package.xml
plan_env/include/plan_env/: edt_environment.h  map_ros.h  obj_predictor.h  sdf_map.h
plan_env/src/: map_ros.cpp  obj_generator.cpp  obj_predictor.cpp  sdf_map.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/include/quadrotor_msgs/: comm_types.h  decode_msgs.h
quadrotor_msgs/msg/: Gains.msg  OutputData.msg  PPROutputData.msg  PolynomialTraj.msg  PolynomialTrajGroup.msg  PolynomialTrajectory.msg  PositionCommand.msg  Px4ctrlDebug.msg  SO3Command.msg  Serial.msg  StatusData.msg  TRPYCommand.msg  Trajectory.msg
quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
rosa/: CMakeLists.txt  package.xml
rosa/config/: traj.rviz
rosa/include/rosa/: rosa_main.h
rosa/launch/: christ.launch.py  mbs.launch.py  pipe.launch.py  redbird.launch.py  runman.launch.py  rviz.launch.py  simplejoint.launch.py  tianqin.launch.py
rosa/src/: rosa_exec.cpp  rosa_main.cpp
traj_utils/: CMakeLists.txt  Conclusion.md  package.xml
traj_utils/include/traj_utils/: planning_visualization.h
traj_utils/src/: planning_visualization.cpp
viewpoint_manager/: CMakeLists.txt  package.xml
viewpoint_manager/config/: traj.rviz  viewpoint_manager.rviz
viewpoint_manager/include/viewpoint_manager/: skeleton_viewpoint.h  viewpoint_manager.h  viewpoint_manager_node.h
viewpoint_manager/launch/: christ.launch.py  mbs.launch.py  normal.launch.py  pipe.launc.py  rviz.launch.py  rviz_normal.launch.py
viewpoint_manager/src/: skeleton_viewpoint.cpp  skeleton_viewpoint_node.cpp  viewpoint_manager.cpp  viewpoint_manager_node.cpp
