<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chranos@todo.todo">chranos</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>bspline</build_depend>
  <build_depend>bspline_opt</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>poly_traj</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <build_export_depend>bspline</build_export_depend>
  <build_export_depend>bspline_opt</build_export_depend>
  <build_export_depend>path_searching</build_export_depend>
  <build_export_depend>poly_traj</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>bspline</exec_depend>
  <exec_depend>bspline_opt</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>poly_traj</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
